# cineverse

./: .gitignore  CHANGELOG.md  PROJECT_STATE.md  README.md
.github/workflows/: cd.yml  ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260101_0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  clips.py  journal.py  videos.py
backend/app/core/: config.py  db.py  deps.py  logging.py  metrics.py  security.py
backend/app/models/: __init__.py  clip.py  journal.py  share.py  user.py  video.py
backend/app/schemas/: clip.py  common.py  journal.py  user.py  video.py
backend/app/services/: __init__.py  ffmpeg_service.py  storage.py  websocket_manager.py
backend/tests/: conftest.py  test_auth.py  test_clips.py  test_journal.py  test_videos.py
database/migrations/: README.md
database/seed/: seed.sql
devops/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
devops/nginx/: nginx.conf
docs/: API_SPEC.md  ARCHITECTURE.md  DEPLOY_VERCEL.md  DESIGN_SYSTEM.md  RUNBOOK.md
docs/screenshots/: README.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
frontend/tests/: VideoPlayer.test.tsx  auth.test.ts  setup.ts  utils.test.ts
observability/alerting/: rules.yml
observability/prometheus/: prometheus.yml
qa/e2e/: README.md  playwright.config.ts  user-flow.spec.ts
qa/integration/: README.md
qa/load/: README.md  (+2 more)
(+38 files in other folders)
